motherhood fixed caption spacing

--- a/css/styles.scss
+++ b/css/styles.scss
@@ -157,6 +157,10 @@ footer {
     line-height: 1.6;
     font-size: 18px;
   }
+  .text-muted{
+    font-size: 80%;
+    font-weight: 400;
+  }
 }
 blockquote{
   color: #383E49;
